ready project +delite

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -62,7 +62,7 @@ img:not([width]):not([height]) {
 	width: 100%;
 	padding: 0;
 	margin: 0 auto;
-	background-image: url(../img/_src/backg.jpg);
+	background-image: url(../img/src/backg.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: bottom center;
@@ -565,7 +565,7 @@ img:not([width]):not([height]) {
 	top: -25px;
 	width: 46px;
 	height: 46px;
-	background-image: url(../img/_src/angle.png);
+	background-image: url(../img/src/angle.png);
 }
 
 .service_items {
@@ -789,7 +789,7 @@ img:not([width]):not([height]) {
 	width: 100%;
 	padding: 0;
 	margin: 0;
-	background-image: url(../img/_src/back.jpg);
+	background-image: url(../img/src/back.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
@@ -855,7 +855,7 @@ img:not([width]):not([height]) {
 	right: 30px;
 	width: 80px;
 	height: 92px;
-	background-image: url(../img/_src/logo_footer.svg);
+	background-image: url(../img/src/logo_footer.svg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
@@ -908,7 +908,7 @@ img:not([width]):not([height]) {
 	left: 0px;
 	width: 10px;
 	height: 11px;
-	background-image: url(../img/_src/polygon.svg);
+	background-image: url(../img/src/polygon.svg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
@@ -1012,7 +1012,7 @@ img:not([width]):not([height]) {
 	right: 2px;
 	width: 7px;
 	height: 8px;
-	background-image: url(../img/_src/polygon.svg);
+	background-image: url(../img/src/polygon.svg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
