--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -56,7 +56,6 @@ img:not([width]):not([height]) {
 }
 
 // Блок main-header Start
-
 .main-header {
 	min-height: 100vh;
 	width: 100%;
@@ -92,11 +91,9 @@ img:not([width]):not([height]) {
 	margin: 0;
 	width: 78px;
 }
-
 // Блок main-header end
 
 // Блок menu Start
-
 .menu {
 	padding: 0;
 	margin: 0;
@@ -143,8 +140,8 @@ img:not([width]):not([height]) {
 .menu__item:not(.menu__item--active) a::after {
 	content: "";
   position: absolute;
-  bottom: 0;
   left: 0;
+  bottom: 0;
 	width: 0%;
   height: 3px;
   background-color: $accent;
@@ -154,8 +151,8 @@ img:not([width]):not([height]) {
 .menu__item:hover a::after {
 	content: "";
   position: absolute;
-  bottom: 0;
   left: 0;
+  bottom: 0;
 	width: 100%;
   height: 3px;
   background-color: $accent;
@@ -163,153 +160,124 @@ img:not([width]):not([height]) {
 	transition: 1s ease;
 }
 
+.menu__item:not(.menu__item--active):hover a {
+	color: $accent;
+}
+
 @media (max-width: 800px) {
-	.main-header__logo {
-		padding: 0;
-		margin: 0;
+	.main-header__wrap {
+		padding-bottom: 0;
 	}
 
-	.main-header__wrap {
+	.main-header__logo {
+		width: 100%;
+		padding: 0;
 		margin: 0;
-		padding-bottom: 0;
-		flex-direction: column;
 		text-align: center;
 	}
 
 	.menu {
-		display: block;
+		padding: 0;
+		margin: 10px 0;
 		width: 100%;
-		margin: 20px auto;	
-		padding: 0;	
-		height: 50px;
-		background-color: $accent;
-		position: relative;
-	}
-
-	.menu__toggle {
-		position: absolute;
-		top: 13px;
-		right: 13px;
-		font-size: 0;
-		border: none;
-		display: inline-block;
-		width: 50px;
-		height: 25px;
-		cursor: pointer;
-		background-color: transparent;
-		padding: 10px;
-		margin: 0;
-		z-index: 2;
-	}
-
-	.menu__toggle:hover {
-		color: #fff;
-	}
-
-	.menu--closed .menu__toggle::before {
-		content: "";
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 50px;
-		height: 4px;
-		background-color: #fff;
-		box-shadow: 0 10px 0 0 #fff,
-		0 20px 0 0 #fff;
-	}
-
-	.menu--closed .menu__toggle:hover::before {
-		background-color: #fff;
-		box-shadow: 0 10px 0 0 #fff,
-		0 20px 0 0 #fff;
-	}
-
-	.menu--opened .menu__toggle {
-		width: 30px;
-		z-index: 120;
-		&::before,
-		&::after {
-			content: "";
-			position: absolute;
-			top: 10px;
-			left: 0;
-			width: 30px;
-			height: 4px;
-			background-color: $accent;
-		}
-		&::before {
-			transform: rotate(45deg);
-		}
-		&::after {
-			transform: rotate(-45deg);
-		}
-		&:hover::before,
-		&:hover::after  {
-			background-color: $accent;
-		}
 	}
 
 	.menu__items {
-		display: block;
-		text-align: center;
+		height: 0;
+		opacity: 0;
+		overflow: hidden;
+		max-width: 320px;
 		padding: 0;
-		margin: 0;
+		margin: 0 auto;
+		text-align: center;
+		flex-direction: column;
+		transition: opacity 1s;
 	}
 
-	.menu--opened .menu__items {
-		position: absolute;
-		width: 100%;
-		top: 0;
-		background-color: #fff;
-		z-index: 110;
-		transition: background-color .5s;
-	}
-
-	.menu__item {
-		padding: 7px 0;
-		margin: 0;
-	}
-
-	.menu--opened .menu__item a {
-		color: $accent;
-	}
-
-	.menu__item--active a::after,
-	.menu__item:hover a::after {
-	  top: 30px;
-	  width: 10%;
-	  left: 50%;
-	  transform: translateX(-50%);
-	}
-	
-	.menu--closed .menu__item {
-		display: none;
-	}
-
-	.menu--nojs .menu__toggle {
-		display: none;
-	}
-
-	.menu--nojs .menu--opened {
-		display: block;
-	}
-	.menu--nojs .menu__items {
+	.menu__item:not(.menu__item--active) a::after {
 		position: static;
 	}
 
-	.menu--nojs.menu  {
-		height: 100%;
+	.menu__item:not(.menu__item--active):hover a {
+		color: $accent;
 	}
 
-	.menu--closed .menu__item--active {
+	.menu__items--block {
+		height: 100%;
+		opacity: 1;
+		transition: all 1s;
+	}
+
+	.menu__item--active a {
+		display: inline;
+		padding-bottom: 8px;
+	}
+
+	.menu__toggle--wrap {
+		padding: 0;
+		margin: 10px 0;
+	  width: 60px;
+	  height: 40px;
+	  position: relative;
+		top: 0;
+	  left: 50%;
+	  transform: translateX(-50%);
+	  &:hover{
+	    cursor:pointer;
+	  }
+	}
+
+	.menu__toggle {
 		display: block;
+	  height: 3px;
+	  margin: 0;
+	  padding: 0;
+	  width: 60px;
+	  outline: none;
+	  position: absolute;
+	  top: 50%;
+	  left: 50%;
+	  border: 0;
+	  border-radius: 10px;
+	  background-color: #fff;
+	  transform: translate(-50%,-50%) rotate(0deg);
+	  transition: all ease 0.5s;
+	  &::before,&::after{
+	    content:"";
+	    position: absolute;
+	    height: inherit;
+	    border-radius: inherit;
+	    background-color: inherit;
+	    width: 50%;
+	    transition: all ease 0.5s;
+	  }
+	  &::before{
+	    top: -10px;
+	    left: 0;
+	    transform-origin: left;
+	  }
+	  &::after{
+	    bottom:-10px;
+	    right: 0;
+	    transform-origin: right;
+	  }
+	}
+
+	.open {
+	  transform:translate(-50%,-50%) rotate(135deg);
+	  &::before{
+	    top:0;
+	    transform: translateX(100%) rotate(-90deg);
+	  }
+	  &::after{
+	    bottom:0;
+	    transform: translateX(-100%) rotate(-90deg);
+	  }
 	}
 }
-
 // Блок menu end
 
 // Блок slider Start
-
 .slider {
 	max-width: 1350px;
 	margin: 0 auto;
@@ -422,7 +390,7 @@ img:not([width]):not([height]) {
 	}
 }
 
-@media (max-width: 768px) {
+@media (max-width: 800px) {
 	.slider {
 		padding-top: 30px;
 		padding-left: 20px;
@@ -467,11 +435,9 @@ img:not([width]):not([height]) {
 		margin-right: 5px;
 	}
 }
-
 // Блок slider end
 
 // Блок smoothscroll Start
-
 .smoothscroll {
 	position: absolute;
 	left: 0;
@@ -501,11 +467,9 @@ img:not([width]):not([height]) {
 .smoothscroll polygon {
 	stroke: $accent;
 }
-
 // Блок smoothscroll end
 
 // Блок advantages Start
-
 .advantages {
 	max-width: 870px;
 	margin: 0 auto;
@@ -563,11 +527,9 @@ img:not([width]):not([height]) {
 		padding-bottom: 0;
 	}
 }
-
 // Блок advantages end
 
 // Блок service Start
-
 .service {
 	width: 100%;
 	padding: 0;
@@ -652,11 +614,9 @@ img:not([width]):not([height]) {
 	line-height: 22px;
 	color: $text;
 }
-
 // Блок service end
 
 // Блок presentation Start
-
 .presentation {
 	max-width: 1300px;
 	padding: 100px 50px;
@@ -816,11 +776,9 @@ img:not([width]):not([height]) {
 		line-height: 15px;
 	}
 }
-
 // Блок presentation end
 
 // Блок contact Start
-
 .contact {
 	width: 100%;
 	padding: 0;
@@ -870,11 +828,9 @@ img:not([width]):not([height]) {
 		margin-top: 20px;
 	}
 }
-
 // Блок contact end
 
 // Блок main-footer Start
-
 .main-footer {
 	max-width: 100%;
 	padding: 0;
@@ -1019,11 +975,9 @@ img:not([width]):not([height]) {
 		margin-bottom: 80px;
 	}
 }
-
 // Блок main-footer end
 
 // Блок copyright Start
-
 .copyright {
 	padding: 5px 50px;
 	margin: 0;
@@ -1053,11 +1007,9 @@ img:not([width]):not([height]) {
 	background-size: cover;
 	background-position: center center;
 }
-
 // Блок copyright end
 
 // magnificPopup Start
-
 .mfp-fade.mfp-bg {
 	opacity: 0;
 	transition: all 0.15s ease-out;
@@ -1079,5 +1031,4 @@ img:not([width]):not([height]) {
 .mfp-fade.mfp-wrap.mfp-removing .mfp-content {
 	opacity: 0;
 }
-
 // magnificPopup End
