--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -342,8 +342,7 @@ img:not([width]):not([height]) {
 	position: absolute;
 	top: 43%;
 	right: 4%;
-	padding: 10px;
-	z-index: 100;
+	padding: 0;
 	margin: 0;
 	display: flex;
 	flex-direction: column;
@@ -351,17 +350,23 @@ img:not([width]):not([height]) {
 
 .slider__toggle {
 	font-size: 0;
-	margin: 0;
+	line-height: 0;
+	height: 20px;
+	width: 20px;
+	margin: 5px 0;
 	padding: 0;
+	user-select: none;
 	cursor: pointer;
+	background: 0 0; 
+	border: none; 
 }
 
-.slider__toggle:hover:not(.active) polygon {
+.slider__toggle span:hover:not(.active) polygon {
 	fill: #fff;
 	stroke: #fff;
 }
 
-.slider__toggle:active polygon,
+.slider__toggle span:active polygon,
 .active polygon {
 	fill: $accent;
 	stroke: $accent;
@@ -440,8 +445,10 @@ img:not([width]):not([height]) {
 // Блок smoothscroll Start
 .smoothscroll {
 	position: absolute;
-	left: 0;
-	right: 0;
+
+	right: 50%;
+	width: 150px;
+	transform: translateX(50%);
 	bottom: 45px;
 	padding: 0;
 	margin: 0;
@@ -466,6 +473,10 @@ img:not([width]):not([height]) {
 
 .smoothscroll polygon {
 	stroke: $accent;
+}
+
+.smoothscroll:hover polygon {
+	stroke: #fff;
 }
 // Блок smoothscroll end
 
